--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,6 @@
 backend:
-  name: test-repo
-  # name: github
-  # repo: sgost/contentconcepts-data
+  name: github
+  repo: sgost/contentconcepts-data
 
 publish_mode: editorial_workflow
 
