--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "less": "^3.11.1",
     "moment": "^2.27.0",
     "netlify-cms-app": "^2.12.19",
+    "number-to-words": "^1.2.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
