--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: github
-  repo: fidisys/contentconcepts-data
+  # repo: fidisys/contentconcepts-data
+    repo: sgost/contentconcepts-data
 
 publish_mode: editorial_workflow
 
@@ -92,6 +93,7 @@ collections:
               - { label: Description, name: description }
               - { label: Image, name: image, widget: image }
               - { label: Link, name: link }
+              - { label: Button Text, name: btntext }
       - label: Specialization
         name: specialization
         file: "home/specialization.md"
