--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -92,6 +92,7 @@ collections:
               - { label: Description, name: description }
               - { label: Image, name: image, widget: image }
               - { label: Link, name: link }
+              - { label: Button Text, name: btntext }
       - label: Specialization
         name: specialization
         file: "home/specialization.md"
