--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -460,7 +460,7 @@ collections:
           name: connectToolsToggle,
           label: Toggle to show connect tools container,
           default: show,
-          reuired: false,
+          required: false,
         }
       - label: Connect Tools Container
         name: connectTools
