--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
   "devDependencies": {
     "prettier": "2.0.5"
   },
+  "engines": {
+    "node": ">= 14.15.0"
+  },
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
